Flip dark scrollbar thumb colors, add hover states, fix button sizes

--- a/client/scrollbars.styl
+++ b/client/scrollbars.styl
@@ -1,15 +1,20 @@
 // Custom scrollbars, customized by CSS variables for light and dark theme
 
 :root
+  --scrollbar-size: 15px
   --scrollbar-bar: #aaa
+  --scrollbar-bar-hover: #888
+  --scrollbar-bar-active: #666
   --scrollbar-track: #ddd
   --scrollbar-button: #aaa
   --scrollbar-button-hover: #888
   --scrollbar-button-active: #666
 
 .dark
-  --scrollbar-bar: #333
-  --scrollbar-track: #777
+  --scrollbar-bar: #777
+  --scrollbar-bar-hover: #999
+  --scrollbar-bar-active: #bbb
+  --scrollbar-track: #333
   --scrollbar-button: #999
   --scrollbar-button-hover: #bbb
   --scrollbar-button-active: #ddd
@@ -21,9 +26,9 @@
   scrollbar-color: var(--scrollbar-bar) var(--scrollbar-track)
 
   // Webkit/Blink browsers support more detailed customization:
-  &::-webkit-scrollbar
-    width: 15px
-    height: 15px
+  &::-webkit-scrollbar, &::-webkit-scrollbar-button
+    width: var(--scrollbar-size)
+    height: var(--scrollbar-size)
   &::-webkit-scrollbar-track,
   &::-webkit-scrollbar-piece,
   &::-webkit-scrollbar-corner
@@ -33,6 +38,10 @@
     border-radius: 6px
     background-color: var(--scrollbar-bar)
     border: 3px solid var(--scrollbar-track)
+    &:hover
+      --scrollbar-bar: var(--scrollbar-bar-hover)
+    &:active
+      --scrollbar-bar: var(--scrollbar-bar-active)
   &::-webkit-scrollbar-button
     background-color: var(--scrollbar-bar)
     &:hover
